# goodwe-inverter-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  glama.json  pyproject.toml
docs/: docker-compose.yml
docs/k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/goodwe_mcp/: __main__.py  connection.py  server.py
