[project]
name = "goodwe-inverter-mcp"
version = "0.1.0"
description = "MCP server for monitoring and controlling GoodWe solar inverters"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "goodwe>=0.4.10",
]

[project.scripts]
goodwe-mcp = "goodwe_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodwe_mcp"]

[tool.uv]
dev-dependencies = []
